fixed "top5score" <th> from growing too large when not enough scores are inputted.

--- a/src/menu/StatisticsMenu.css
+++ b/src/menu/StatisticsMenu.css
@@ -54,6 +54,7 @@ table.best-times {
 table.best-times th {
     background-color: #ddd;
     border: 1px solid #ccc;
+    height: 20px;
 }
 
 table.best-times tr {
